--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.1.20",
+    "antd": "^3.14.1",
+    "gatsby": "^2.2.13",
     "gatsby-image": "^2.0.31",
+    "gatsby-plugin-antd": "^2.0.2",
+    "gatsby-plugin-less": "^2.0.11",
     "gatsby-plugin-manifest": "^2.0.21",
+    "gatsby-plugin-netlify-cms": "^3.0.17",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.7",
-    "gatsby-plugin-sharp": "^2.0.24",
+    "gatsby-plugin-sharp": "^2.0.31",
     "gatsby-source-filesystem": "^2.0.23",
+    "gatsby-transformer-remark": "^2.3.8",
     "gatsby-transformer-sharp": "^2.1.15",
+    "less": "^3.9.0",
+    "netlify-cms": "^2.8.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "sharp": "^0.21.3",
+    "typeface-fira-sans": "0.0.54"
   },
   "devDependencies": {
     "prettier": "^1.16.4"
